[package]
name = "easy-ash"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1.0"
ash = {version = "0.37", features = ["linked"]}
ash-window = "0.10.0"
raw-window-handle = "0.3.4"
image = "0.24"
easy-versions = { git = "https://github.com/ArthurKValladares/Easy-Versions" }
math = { git = "https://github.com/ArthurKValladares/Yet-Another-Math-Lib" }